--- a/Login.html
+++ b/Login.html
@@ -1,10 +1,111 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>CampusConect</title>
+    <link rel="icon" type="image/x-icon" href="assets/logo_cc.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/stylesBootstrap.css" rel="stylesheet" />
+    <link href="css/styles_index.css" rel="stylesheet" />
+    <link href="css/styles_login.css" rel="stylesheet" />
 </head>
-<body>
-    <h1><a href="/index.html">Aqui va el login preciona para volver Atras</a></h1>
+<body id="page-top" class="masthead">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+        <div class="container px-4 px-lg-5">
+            <a class="navbar-brand" href="/CampusConect/index.html">
+                <img src="/CampusConect/assets/logo_cc.ico" class="logo_menu">Campus Conect
+            </a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="/CampusConect/index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/CampusConect/index.html">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/CampusConect/index.html">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/CampusConect/index.html">Equipo</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/CampusConect/Login.html">Login</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    
+    <!-- Contenedor de Login y Registro -->
+    <div class="container form-wrapper" id="login">
+        <!-- Sección de Login -->
+        <div class="form-container login-container">
+            <form action="#">
+                <h2>Login</h2>
+                <input type="email" placeholder="Correo" required />
+                <input type="password" placeholder="Contraseña" required />
+                <div class="recordar">
+                    <label><input type="checkbox" /> Recordar</label>
+                    <a href="#">¿Olvidaste tu contraseña?</a>
+                </div>
+                <button>Login</button>
+                <p>¿No tienes una cuenta? <a href="#" onclick="toggleForms()">Registrarme</a></p>
+            </form>
+        </div>
+
+        <!-- Sección de Registro -->
+        <div class="form-container register-container" style="display:none;">
+            <form action="#">
+                <h2>Registro</h2>
+                <input type="text" placeholder="Nombre" required />
+                <input type="email" placeholder="Correo" required />
+                <input type="password" placeholder="Contraseña" required />
+                <input type="password" placeholder="Validar Contraseña" required />
+                <div class="options">
+                    <label><input type="radio" name="role" /> Estudiante</label>
+                    <label class="text-black" class="separador"> | </label>
+                    <label><input type="radio" name="role" /> Empresa</label>
+                </div>
+                <button>Registrarse</button>
+                <p>¿Ya tienes una cuenta? <a href="#" onclick="toggleForms()">Login</a></p>
+            </form>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer_page">
+        <div class="container text-center">
+            <p class="footer-text">&copy; CampusConect 2024. Todos los derechos reservados.</p>
+            <div class="footer-links">
+                <a href="#servicios" class="footer-link">Servicios</a> |
+                <a href="#nosotros" class="footer-link">Nosotros</a> |
+                <a href="#equipo" class="footer-link">Equipo</a>
+            </div>
+            <div class="social-icons">
+                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+    <!-- SB Forms JS-->
+    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+
+    <!-- Script para alternar entre Login y Registro -->
+    <script>
+        function toggleForms() {
+            const loginContainer = document.querySelector('.login-container');
+            const registerContainer = document.querySelector('.register-container');
+            loginContainer.style.display = loginContainer.style.display === 'none' ? 'block' : 'none';
+            registerContainer.style.display = registerContainer.style.display === 'none' ? 'block' : 'none';
+        }
+    </script>
 </body>
 </html>
