--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
+        <meta name="description" content="La plataforma que te conecta con el mundo profesional desde tus primeros pasos. 
+        Accede a ofertas de empleo y mantente al día con las mejores oportunidades para tu carrera. 
+        CampusConnect es más que una plataforma; es tu primer paso hacia el éxito profesional" />
+        
         <meta name="author" content="" />
         <title>CampusConect</title>
         <link rel="icon" type="image/x-icon" href="assets/logo_cc.ico" />
@@ -20,7 +23,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top"> <img src="/CampusConect/assets/logo_cc.ico" class="logo_menu">Campus Conect</a>
+                <a class="navbar-brand" href="#page-top"> <img src="/CampusConect/assets/logo_cc.ico" alt="logo de Campus Conect" class="logo_menu">Campus Conect</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -115,32 +118,28 @@
         <h2 class="text-center">Equipo</h2>
         <div class="row justify-content-center">
             <div class="col-md-3 team-member">
-                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Member 1">
-                <p class="team-name">Name</p>
+                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Imagen del mienbro 1 Sneider">
+                <p class="team-name">Sneider</p>
             </div>
             <div class="col-md-3 team-member">
-                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Member 1">
-                <p class="team-name">Name</p>
+                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Imagen del mienbro 2 Johan">
+                <p class="team-name">Johan</p>
             </div>
             <div class="col-md-3 team-member">
-                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Member 1">
-                <p class="team-name">Name</p>
+                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Imagen del mienbro 3 Alejandro">
+                <p class="team-name">Alejandro</p>
             </div>
             <div class="col-md-3 team-member">
-                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Member 1">
-                <p class="team-name">Name</p>
+                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Imagen del mienbro 4 Cristian">
+                <p class="team-name">Cristian</p>
             </div>
             <div class="col-md-3 team-member">
-                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Member 1">
-                <p class="team-name">Name</p>
+                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Imagen del mienbro 5 Javier">
+                <p class="team-name">Javier</p>
             </div>
             <div class="col-md-3 team-member">
-                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Member 1">
-                <p class="team-name">Name</p>
-            </div>
-            <div class="col-md-3 team-member">
-                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Member 1">
-                <p class="team-name">Name</p>
+                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Imagen del mienbro 6 Sebastian">
+                <p class="team-name">Sebastian</p>
             </div>
         </div>
     </div>
@@ -170,8 +169,6 @@
 <!-- * *                               SB Forms JS                               * *-->
 <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-
-        
+<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>        
     </body>
 </html>
