--- a/Login.html
+++ b/Login.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link" href="/CampusConect/index.html">Servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="/CampusConect/index.html">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link" href="/CampusConect/index.html">Equipo</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/CampusConect/Login.html">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Login.html">Login</a></li>
                 </ul>
             </div>
         </div>
