--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
                         <li class="nav-item"><a class="nav-link" href="#nosotros">Nosotros</a></li>
                         <li class="nav-item"><a class="nav-link" href="#equipo">Equipo</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/CampusConect/Login.html">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Login.html">Login</a></li>
                     </ul>
                 </div>
             </div>
