--- a/cliente_html/inicio_cliente.html
+++ b/cliente_html/inicio_cliente.html
@@ -8,7 +8,7 @@
         CampusConnect es más que una plataforma; es tu primer paso hacia el éxito profesional" />
     <meta name="author" content="" />
     <title>CampusConect</title>
-    <link rel="icon" type="image/x-icon" href="../assets/logo_cc.ico" />
+    <link rel="icon" type="image/x-icon" href="../../assets/logo_cc.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
@@ -19,8 +19,8 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="../index.html">
-                <img src="../assets/logo_cc.ico" class="logo_menu">Campus Conect
+            <a class="navbar-brand" href="../../index.html">
+                <img src="../../assets/logo_cc.ico" class="logo_menu">Campus Conect
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
@@ -28,10 +28,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Perfil</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Hoja de vida</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Historial</a></li>
+                    <li class="nav-item"><a class="nav-link" href="inicio_cliente.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="perfil.html">Perfil</a></li>
+                    <li class="nav-item"><a class="nav-link" href="hoja_de_vida.html">Hoja de vida</a></li>
+                    <li class="nav-item"><a class="nav-link" href="historial.html">Historial</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html">Logout</a></li>
                 </ul>
             </div>
@@ -45,7 +45,7 @@
         <input type="text" name="buscador" id="buscador" placeholder="Buscador">
         <input type="submit" name="buscar" id="buscar">
     </div>
-    <div class="filter">
+    <div class="filter background">
         <h3>Filtrado</h3>
         <div class="filter-content">
             <h2>Categorias</h2>
@@ -110,21 +110,21 @@
             </label>
         </div>
     </div>
-    <div class="offers-box">
+    <div class="offers-box background">
         <div class="offer">
             <h4>Desarrollador Web <span class="sueldo">2'200.000 $</span></h4>
             <p class="p-offer">Buscamos un desarrollador web talentoso y motivado para unirse a nuestro equipo. Será responsable de diseñar, desarrollar y mantener aplicaciones y sitios web funcionales, atractivos y optimizados para una experiencia de usuario excepcional.</p>
-            <button>Aplicar</button>
+            <a href="ver_ofertas/oferta1.html"><button>Aplicar</button></a>
         </div>
         <div class="offer">
-            <h4>Analista de datos <span class="sueldo">2'200.000 $</span></h4>
+            <h4>Analista de datos <span class="sueldo">1'800.000 $</span></h4>
             <p class="p-offer">Buscamos un analista de datos detallista y orientado a resultados para extraer, procesar y analizar información clave que permita a la empresa tomar decisiones estratégicas. Será responsable de transformar datos en conocimiento práctico y generar informes claros y accionables.</p>
-            <button>Aplicar</button>
+            <a href="ver_ofertas/oferta2.html"><button>Aplicar</button></a>
         </div>
         <div class="offer">
-            <h4>Desarrollador Backend <span class="sueldo">2'200.000 $</span></h4>
+            <h4>Desarrollador Backend <span class="sueldo">2'350.000 $</span></h4>
             <p class="p-offer">Buscamos un desarrollador backend talentoso para crear, mantener y optimizar los sistemas y servicios que impulsan nuestras aplicaciones. Será responsable de garantizar la escalabilidad, seguridad y funcionalidad del software mientras colabora con otros equipos para cumplir los objetivos del negocio.</p>
-            <button>Aplicar</button>
+            <a href="ver_ofertas/oferta3.html"><button>Aplicar</button></a>
         </div>
     </div>
 </div>
