--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
                         <li class="nav-item"><a class="nav-link" href="#nosotros">Nosotros</a></li>
                         <li class="nav-item"><a class="nav-link" href="#equipo">Equipo</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/CampusConect/Login.html">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Login.html">Login</a></li>
                     </ul>
                 </div>
             </div>
@@ -118,27 +118,27 @@
         <h2 class="text-center">Equipo</h2>
         <div class="row justify-content-center">
             <div class="col-md-3 team-member">
-                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Imagen del mienbro 1 Sneider">
+                <img src="assets/img/equipo.jpeg" alt="Imagen del mienbro 1 Sneider">
                 <p class="team-name">Sneider</p>
             </div>
             <div class="col-md-3 team-member">
-                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Imagen del mienbro 2 Johan">
+                <img src="assets/img/equipo.jpeg" alt="Imagen del mienbro 2 Johan">
                 <p class="team-name">Johan</p>
             </div>
             <div class="col-md-3 team-member">
-                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Imagen del mienbro 3 Alejandro">
+                <img src="assets/img/equipo.jpeg" alt="Imagen del mienbro 3 Alejandro">
                 <p class="team-name">Alejandro</p>
             </div>
             <div class="col-md-3 team-member">
-                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Imagen del mienbro 4 Cristian">
+                <img src="assets/img/equipo.jpeg" alt="Imagen del mienbro 4 Cristian">
                 <p class="team-name">Cristian</p>
             </div>
             <div class="col-md-3 team-member">
-                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Imagen del mienbro 5 Javier">
+                <img src="assets/img/equipo.jpeg" alt="Imagen del mienbro 5 Javier">
                 <p class="team-name">Javier</p>
             </div>
             <div class="col-md-3 team-member">
-                <img src="/CampusConect/assets/img/equipo.jpeg" alt="Imagen del mienbro 6 Sebastian">
+                <img src="assets/img/equipo.jpeg" alt="Imagen del mienbro 6 Sebastian">
                 <p class="team-name">Sebastian</p>
             </div>
         </div>
