--- a/cliente_html/hoja_de_vida.html
+++ b/cliente_html/hoja_de_vida.html
@@ -34,10 +34,33 @@
                     <li class="nav-item"><a class="nav-link" href="hoja_de_vida.html">Hoja de vida</a></li>
                     <li class="nav-item"><a class="nav-link" href="historial.html">Historial</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html">Logout</a></li>
+                    <!-- Contenedor de notificaciones -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="notificationsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fas fa-bell"></i>
+                            <span class="badge bg-danger">12</span>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="notificationsDropdown">
+                            <li><a class="dropdown-item" href="#">Aprobaste un inicio de sesión.</a></li>
+                            <li><a class="dropdown-item" href="#">KyoPlank transmitió en vivo: Ranked...</a></li>
+                            <li><a class="dropdown-item" href="#">FACTO cambió su nombre.</a></li>
+                            <li><a class="dropdown-item" href="#">Tu última historia tuvo 28 visualizaciones.</a></li>
+                            <li><a class="dropdown-item" href="#">Fue el cumpleaños de Daniel Riaño.</a></li>
+                            <li><a class="dropdown-item" href="#">Tu publicación recibió un nuevo comentario.</a></li>
+                            <li><a class="dropdown-item" href="#">Se actualizó la política de privacidad.</a></li>
+                            <li><a class="dropdown-item" href="#">Nueva invitación a un evento.</a></li>
+                            <li><a class="dropdown-item" href="#">Tu publicación fue compartida 5 veces.</a></li>
+                            <li><a class="dropdown-item" href="#">Un amigo te mencionó en un comentario.</a></li>
+                            <li><a class="dropdown-item" href="#">Tienes una solicitud de amistad pendiente.</a></li>
+                            <li><a class="dropdown-item" href="#">Verifica tu dirección de correo electrónico.</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item text-center" href="#">Ver todas las notificaciones</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav>   
 <!-------------------------------------------------------------------------->    
 
     <div class="spacing">
