--- a/cliente_html/historial.html
+++ b/cliente_html/historial.html
@@ -135,17 +135,16 @@
         </div>
         <div class="offers-box background">
             <div class="offer">
-                <h4>Desarrollador Web <span class="sueldo">2'200.000 $</span></h4>
-                <p class="p-offer">Buscamos un desarrollador web talentoso y motivado para unirse a nuestro equipo. Será responsable de diseñar, desarrollar y mantener aplicaciones y sitios web funcionales, atractivos y optimizados para una experiencia de usuario excepcional.</p>
-                <a href="oferta1.html"><button>Aplicar</button></a>
-            </div>
-            <div class="offer">
-                <h4>Analista de datos <span class="sueldo">1'800.000 $</span></h4>
+                <div class="div-title">
+                    <h4>Analista de datos Web <span class="sueldo">1'800.000 $</span></h4>
+                </div>
                 <p class="p-offer">Buscamos un analista de datos detallista y orientado a resultados para extraer, procesar y analizar información clave que permita a la empresa tomar decisiones estratégicas. Será responsable de transformar datos en conocimiento práctico y generar informes claros y accionables.</p>
                 <a href="oferta2.html"><button>Aplicar</button></a>
             </div>
             <div class="offer">
-                <h4>Desarrollador Backend <span class="sueldo">2'350.000 $</span></h4>
+                <div class="div-title">
+                    <h4>Desarrollador Backend <span class="sueldo">2'350.000 $</span></h4>
+                </div>
                 <p class="p-offer">Buscamos un desarrollador backend talentoso para crear, mantener y optimizar los sistemas y servicios que impulsan nuestras aplicaciones. Será responsable de garantizar la escalabilidad, seguridad y funcionalidad del software mientras colabora con otros equipos para cumplir los objetivos del negocio.</p>
                 <a href="oferta3.html"><button>Aplicar</button></a>
             </div>
